# Projects

AGL High Bill Analyzer/app/: app.py
AGL High Bill Analyzer/data/: bills.csv  customers.csv  intervals_30min.csv
AGL High Bill Analyzer/va_mock/: intents.json
[01] Python/: WebScraping.py  app-users.py  chatgpt.py  helpers.py  llm.py  main.py  mymodule.py  pythonscripting1.py
[01] Python/Code with Hasan/: DataService.py  Financeapi.py  Streamlit1.py  StreamlitUI.py  Streamlitbase.py  Worksheet.py  ai_prompts_responses.json  appsettings.py  chatbot.py  chatgpt.py  helpers.py  llm.py  logs.txt  main.py  program_sql.py  requirements.txt  streamlit_sql.py  youtube_summarization.py
[01] Python/Code with Hasan/.streamlit/: secrets.toml
[01] Python/PromptTemplates/: ProductivityPrompts.py  ideas.py  prompts.py  textanalysis.py
[02] AI Agents/: .env  blogpostgenerator.py  financial_agent.py  financial_agent_st.py  pdfassistant.py  playground.py  requirements.txt
[02] RAG/: .ENV  RAG Demo copy.ipynb  RAG-DEMO.py
[03] AGENTIC LANGGRAPH/: pyproject.toml  requirements.txt
[03] AI Agents/: pdfassistant1.py
[03] AI Agents/tmp/: workflows.db
[04] AGL - High Bill Analyzer/: README.md
[04] AGL - High Bill Analyzer/app/: analyzer.py  api.py  app.py  requirements.txt
[04] AGL - High Bill Analyzer/data/: bills.csv  customers.csv  intervals_30min.csv  tips_kb.md
